...
    <string name="project_detail_title">Project Details</string>
    <string name="add_project">Add project</string>
    <string name="edit_project">Edit project</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="hours">Hours</string>
    <string name="remaining_tasks">Remaining tasks</string>
...
